--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.12"
 termcolor = "^2.4.0"
+matplotlib = "^3.8.4"
 
 [build-system]
 requires = ["poetry-core"]
