Fix word change while learning

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-translation_mode_change=50
+translation_mode_change=80
 learn_change_mult=1
 translation_mode_threshold=30
 almost_correct_threshold=80
+random_word_change = 100
