--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ translation_mode_change=80
 learn_change_mult=1
 translation_mode_threshold=30
 almost_correct_threshold=80
-random_word_change = 100
+random_word_change=100
+full_word_check_change=150
