Learning system principle change. New learned words count check. Small interface changes. Previous save file may not work.

--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-translation_mode_change=80
-learn_change_mult=1
-translation_mode_threshold=30
-almost_correct_threshold=80
-random_word_change=100
-full_word_check_change=150
+word_mode_change=80
+word_almost_correct_threshold=80
+translation_almost_correct_threshold=50
+contest_mode_change=5
