Contest fix and change menu fix.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-word_mode_change=80
-word_almost_correct_threshold=80
-translation_almost_correct_threshold=50
-contest_mode_change=5
+word_mode_chance=80
+word_almost_correct_threshold=90
+translation_almost_correct_threshold=60
+contest_mode_chance=5
